# configbot_ros_comm

./: .gitignore  Dockerfile  README.md
adaptor_test/: Makefile  node.cpp  node.py  pub_msgs.py  run_test.sh  throttle.sh
clients/roscpp/: CMakeLists.txt  package.xml
clients/roscpp/include/ros/: subscription.h
clients/roscpp/src/libros/: subscription.cpp
clients/roscpp/srv/: AdaptorService.srv
clients/rospy/: CMakeLists.txt  package.xml
clients/rospy/src/rospy/: topics.py
clients/rospy/srv/: AdaptorService.srv
